# warp-transducer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/detail/: cpu_rnnt.h  gpu_rnnt_kernel.h
pytorch_binding/: README.md  setup.py
pytorch_binding/src/: binding.cpp
pytorch_binding/test/: test.py
pytorch_binding/warprnnt_pytorch/: __init__.py
src/: rnnt_entrypoint.cu
tests/: test_cpu.cpp  test_time.cpp
